manifests/deploy.camo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: warehouse-camo
  namespace: ${NAMESPACE:-pypi-test}
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        name: warehouse-camo
    spec:
      containers:
        - name: warehouse-camo
          image: pypa/warehouse-camo:latest
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
