manifests/deploy.rabbitmq.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: ${NAMESPACE:-pypi-test}
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        name: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          resources:
            requests:
              cpu: 250m
              memory: 1024Mi
            limits:
              cpu: 250m
              memory: 1024Mi
