manifests/deploy.redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: ${NAMESPACE:-pypi-test}
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          resources:
            requests:
              cpu: 250m
              memory: 1024Mi
            limits:
              cpu: 250m
              memory: 1024Mi
