manifests/deploy.s3proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: s3proxy
  namespace: ${NAMESPACE}
  labels:
    name: s3proxy
spec:
  revisionHistoryLimit: 10
  replicas: 2
  template:
    metadata:
      labels:
        name: s3proxy
    spec:
      containers:
        - name: s3proxy
          image: registry.jpl.nasa.gov/jsearch/s3proxy:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
