manifests/deploy.web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: ${NAMESPACE:-pypi-test}
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: web
          image: ${IMAGE_PREFIX}/${NAME}-src:${VERSION:latest}
          command: ["hupper", "-m", "gunicorn.app.wsgiapp", "-b", "0.0.0.0:8000", "-c", "gunicorn-cabotage.conf", "warehouse.wsgi:application"]
          resources:
            requests:
              cpu: 500m
              memory: 2048Mi
            limits:
              cpu: 500m
              memory: 2048Mi
