manifests/deploy.worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  namespace: ${NAMESPACE:-pypi-test}
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        name: worker
    spec:
      containers:
        - name: worker
          image: ${IMAGE_PREFIX}/${NAME}-src:${VERSION:latest}
          command: ["hupper", "-m", "celery", "-A", "warehouse", "worker", "-B", "-S", "redbeat.RedBeatScheduler", "-l", "info"]
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 1024Mi
