manifests/svc.camo.yaml
apiVersion: v1
kind: Service
metadata:
  name: camo
  namespace: ${NAMESPACE}
spec:
  selector:
    name: camo
  ports:
    - port: 9000
      targetPort: 9000
