manifests/svc.db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ${NAMESPACE}
spec:
  selector:
    name: db
  ports:
    - port: 5432
      targetPort: db
