manifests/svc.elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: ${NAMESPACE}
spec:
  selector:
    name: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
