manifests/svc.rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: ${NAMESPACE}
spec:
  selector:
    name: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
