manifests/svc.smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp
  namespace: ${NAMESPACE}
spec:
  selector:
    name: smtp
  ports:
    - port: 2525
      targetPort: 2525
