manifests/svc.static.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
  namespace: ${NAMESPACE}
spec:
  selector:
    name: static
  ports:
    - port: 443
      targetPort: 80
