manifests/svc.web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ${NAMESPACE}
spec:
  selector:
    name: web
  ports:
    - port: 443
      targetPort: 8000
