manifests/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: ${NAMESPACE}
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 443
          - path: /files
            backend:
              serviceName: s3proxy
              servicePort: 443
          - path: /camo
            backend:
              serviceName: camo
              servicePort: 443
